--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-
-<a href= "https://www.msu.edu/~sulli465/module1.pdf" > Module 1 </a>
+<!DOCTYPE>
+<html>
+	<head><title>My Webpage!</title></head>
+	<body>
+		<ul>
+			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
+			<li><a href="module2.pdf" >Module 2 </a></li>
+			<li><a href="module3.pdf" Module 3 </a></li>
+		</ul>
+		</body>
+		</html>
