--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<ul>
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
-			<li><a href="module3.pdf" Module 3 </a></li>
+			<li><a href="module3.pdf" > Module 3 </a></li>
 		</ul>
 		</body>
 		</html>
