--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head><title>My Webpage!</title></head>
 	<body>
+	<h1 style="color: teal; font-family: Lucinda Handwriting">KATHERYN</h1>
 		<ul>
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
