--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head><title>My Webpage!</title></head>
 	<body>
-	<h1 style="color: teal; font-family: Lucinda Handwriting">KATHERYN</h1>
+	<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/10415551_958239497536956_7248354797172214504_n.jpg?oh=77351ff6afdd0e02ad6b66dcfc7fa661&oe=5564D8D4"
+/>	
+<h1 style="color: teal; font-family: Stencil ">KATHERYN</h1>
 		<ul>
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
