--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
 			<li><a href="module3.pdf" > Module 3 </a></li>
+			<li><a href="module4.pdf" >Module 4 </a></li>
+			
 		</ul>
+		<ol>
+			<li><img src="https://mail.msu.edu/imp/view.php?popup_view=1&mailbox=INBOX&index=3061&actionID=view_attach&id=1&mimecache=5891bd3f47fdee61e3525d3a8419faae&img_data=1" /></li>
+			<li><img src="https://mail.msu.edu/imp/view.php?popup_view=1&mailbox=INBOX&index=3060&actionID=view_attach&id=1&mimecache=cb3fd4153cd392f650785889e83c2688&img_data=1"/><li>
 		</body>
 		</html>
