--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 			<li><a href="module2.pdf" >Module 2 </a></li>
 			<li><a href="module3.pdf" > Module 3 </a></li>
 			<li><a href="module4.pdf" >Module 4 </a></li>
-			
+				<li><a href="module4pic.JPEG" > </a><li>
 		</ul>
-		<ol>
-			<li></li>
-			<li><<li>
 		</body>
 		</html>
