--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 			<li><a href="module2.pdf" >Module 2 </a></li>
 			<li><a href="module3.pdf" > Module 3 </a></li>
 			<li><a href="module4.pdf" >Module 4 </a></li>
-				<li><a href="module4pic.JPEG" > <img src="https://mail.msu.edu/imp/view.php?images_view_thumbnail=1&mailbox=INBOX.Trash&index=3023&actionID=view_attach&id=1&mimecache=eb83584b81d0ada2260c6ec5a84e9874" ></a><li>
+				<ul>
+					<li><a href="module4.psd">Wireframe</a><li>
+					<li><a href="module41.pdf"> Explanation of Decisions </a></li>
 		</ul>
+			
 		</body>
 		</html>
