--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li><a href="module3.pdf" > Module 3 </a></li>
 			<li><a href="module4.pdf" >Module 4 </a></li>
 				<ul>
-					<li><a href="module4.psd">Wireframe</a><li>
+					<li><a href="module4.psd">Wireframe</a></li>
 					<li><a href="module41.pdf"> Explanation of Decisions </a></li>
 		</ul>
 			
