--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
 			<li><a href="module3.pdf" > Module 3 </a></li>
-			<li><a href="module4.pdf" >Module 4 </a></li>
-				<ul>
-					<li><a href="module4.psd" > Wireframe </a></li>
-					<li><a href="module41.pdf"> Explanation of Decisions </a></li>
-		</ul>
-			
+			<li><a href="module4.pdf" >Module 4 Sitemap </a></li>
+		<ul>
+			<li></li>
+		</ul>	
 		</body>
 		</html>
