--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
 			<li><a href="module2.pdf" >Module 2 </a></li>
 			<li><a href="module3.pdf" > Module 3 </a></li>
-			<li><a href="module4.pdf" >Module 4 Sitemap </a></li>
+			<li>Module 4</li>
 		<ul>
-			<li></li>
+			<li><a href="module4.pdf"> Sitemap</li>
+			<li><a href="module41.pdf"> Wireframe Sketch </a></li>
+		
 		</ul>	
 		</body>
 		</html>
