--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<ul>
 			<li><a href="module4.pdf"> Sitemap</li>
 			<li><a href="module41.pdf"> Wireframe Sketch </a></li>
+			<li><a href="module4rationale.pdf" >Rationale </a></li>
 		
 		</ul>	
 		</body>
