--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head><title>My Webpage!</title></head>
+	<link rel="stylesheet" type="text/css" href="cat.css" />
 	<body>
 		<h1 style="color: teal; font-family: Stencil ">KATHERYN</h1>
 	
