--- a/aboutme.html
+++ b/aboutme.html
@@ -14,17 +14,10 @@
 			<li><a href="module3.pdf" > Module 3 </a></li>
 			<li>Module 4</li>
 		<ul>
-			<li>Site Navigation</li>
-			<li><a href="module4.pdf">Sitemap</li>
+			<li><a href="module4.pdf"> Sitemap</li>
+			<li><a href="module41.pdf"> Wireframe Sketch </a></li>
 			<li><a href="module4rationale.pdf" >Rationale </a></li>
 		
-		</ul>
-		<ul>
-			<li>Module 5</li>
-		<ul>
-			<li><a href="module41.pdf">Wireframe Sketch</a><li>
-			<li><a href="palette.psd" >Color Palette </a></li>
-			<li><a href="wireframe_landing.psd" >Digital Wireframe: Landing Page</a></li>
-			<li><a href="wireframe_resume.psd" >Digital Wireframe: Resume Page</a></li>
-	</body>
+		</ul>	
+		</body>
 		</html>
