--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<ul>
 			<li>Module 5</li>
 		<ul>
-			<li><a href="module41.pdf">Wireframe Sketch</a><li>
+			<li><a href="module41.pdf">Wireframe Sketch</a></li>
 			<li><a href="palette.psd" >Color Palette </a></li>
 			<li><a href="wireframe_landing.psd" >Digital Wireframe: Landing Page</a></li>
 			<li><a href="wireframe_resume.psd" >Digital Wireframe: Resume Page</a></li>
