--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 			<li><a href="module4.pdf">Sitemap</li>
 			<li><a href="module4rationale.pdf" >Rationale </a></li>
 		</ul>
-	<li>hi</li>
+	<li>Module 5</li>
+		<ul>
+			<li>Color Palette</li>
+		</ul>
 		
 
 	</body>
