--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		</ul>
 	<li>Module 5</li>
 		<ul>
-			<li>Color Palette</li>
+			<li><a href="module41.pdf">Wireframe Sketch</a></li>
+			<li><a href="palette.pdf">Color Palette</a></li>
+			<li><a href="wireframe_landing.pdf">Wireframe: Landing</a></li>
 		</ul>
 		
 
