--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<li><a href="module41.pdf">Wireframe Sketch</a></li>
 			<li><a href="palette.pdf">Color Palette</a></li>
 			<li><a href="wireframe_landing.pdf">Wireframe: Landing</a></li>
+			<li><a href="wireframe_resume.pdf" >Wireframe: Resume"</a></li>
 		</ul>
 		
 
