--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</ul>
 	<li>Module 5</li>
 		<ul>
+			<li><a href="interfaces.pdf">Interfaces </a></li>
 			<li><a href="module41.pdf">Wireframe Sketch</a></li>
 			<li><a href="palette.pdf">Color Palette</a></li>
 			<li><a href="wireframe_landing.pdf">Wireframe: Landing</a></li>
