--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<li><a href="palette.pdf">Color Palette</a></li>
 			<li><a href="wireframe_landing.pdf">Wireframe: Landing</a></li>
 			<li><a href="wireframe_resume.pdf" >Wireframe: Resume</a></li>
+			<li><a href="module5rationale">Rationale</a></li>
 		</ul>
 		
 
