--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
 			<li><a href="wireframe_resume.pdf" >Wireframe: Resume</a></li>
 			<li><a href="module5rationale.pdf">Rationale</a></li>
 		</ul>
+	
+	<li>Module 6</li>
+		<ul>
+			<li><a href="palette.pdf"> Color Scheme </a></li>
+			<li><a href="fonts.pdf">Typefaces</a></li>
+			<li>Homepage</li>
+			<li>Contact</li>
+			<li>Portfolio</li>
+			<li>Resume</li>
+			<li>Reflection</li>
+		</ul>
+	
+	<li>Module 7</li>
 		
 
 	</body>
