--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		<ul>
 			<li><a href="palette.pdf"> Color Scheme </a></li>
 			<li><a href="fonts.pdf">Typefaces</a></li>
-			<li><a href="landing.pdf">Homepage</a></li>
-			<li><a href="contact.pdf">Contact</a></li>
-			<li><a href="portfolio.pdf">Portfolio</a></li>
-			<li><a href="resume.pdf">Resume</a></li>
+			<li><a href="landing.psd">Homepage</a></li>
+			<li><a href="contact.psd">Contact</a></li>
+			<li><a href="portfolio.psd">Portfolio</a></li>
+			<li><a href="resume.psd">Resume</a></li>
 			<li>Reflection</li>
 		</ul>
 	
