--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 			<li><a href="contact.psd"> Contact </a></li>
 			<li><a href="portfolio.psd"> Portfolio </a></li>
 			<li><a href="resume.psd"> Resume </a></li>
-			<li>Reflection</li>
+			<li><a href="module6reflection.pdf"> Reflection </a></li>
 		</ul>
 	
 	<li><a href="module7.pdf">Module 7</a></li>
+	<li><a href="design_doc.zip"> Design Docs </a></li>
 		
 
 	</body>
