--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</ul>
 	
 	<li><a href="module7.pdf">Module 7</a></li>
-	<li><a href="design_doc.zip"> Design Docs </a></li>
+	<li><a href="design_docs.zip"> Design Docs </a></li>
 		
 
 	</body>
