--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
 	
 	<li><a href="module7.pdf">Module 7</a></li>
 	<li><a href="design_docs.zip"> Design Docs </a></li>
+	
+<li>Module 8</li>
+	<ul>
+		<li><a href="modules.html">Modules Folder</a>
+		<li>Reflection</li>
+
+<li>Module 9</li>
 		
 
 	</body>
