--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 	
 <li>Module 8</li>
 	<ul>
-		<li><a href="modules.html">Modules Folder</a>
+		<li><a href="modules.cat">Modules Folder</a>
 		<li>Reflection</li>
+	</ul>
 
 <li>Module 9</li>
 		
