--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	
 <li>Module 8</li>
 	<ul>
-		<li><a href="/modules./cat../index.html">Modules Folder</a>
+		<li><a href="modules.html">Modules Folder</a>
 		<li>Reflection</li>
 	</ul>
 
