--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 	
 <li>Module 8</li>
 	<ul>
-		<li><a href="../modules/cat.html">Modules Folder</a>
-		<li>Reflection</li>
+		<li><a href="module8reflection.pdf"> Reflection </a></li>
 	</ul>
 
 <li>Module 9</li>
