--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 	</ul>
 
 <li>Module 9</li>
+	<ul>
+		<li><a href="mee.jpg">Original Photo </a></li>
+		<li><a href="mee2.jpg">Resized Photo</a></li>
+		<li><a href=="header.psd">Header</a></li>
+	</ul>
 		
 
 	</body>
