--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<ul>
 		<li><a href="mee.jpg"> Original Photo </a></li>
 		<li><a href="mee2.jpg"> Resized Photo </a></li>
-		<li><a href=="header.psd"> Header </a></li>
+		<li><a href="header.psd"> Header </a></li>
 	</ul>
 		
 
