--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 	<head><title>Katheryn's Webpage!</title></head>
 	<link rel="stylesheet" type="text/css" href="cat.css" />
 	<body>
-		<h1 style="color: teal; font-family: Stencil ">KATHERYN</h1>
+		<h1><img src="header.jpeg">KATHERYN</h1>
 		
 	<ul>
-		<li><a href="default.asp">Home</a></li>
-		<li><a href="contact.asp">Contact Me</a></li>
-		<li><a href="portfolio.asp">Portfolio</a></li>
-		<li><a href="resume.asp">Resume</a></li>
+		<li><a href="index.html">Home</a></li>
+		<li><a href="contact.html">Contact Me</a></li>
+		<li><a href="portfolio.html">Portfolio</a></li>
+		<li><a href="resume.html">Resume</a></li>
 	</ul>
-	
-	<img src="https://scontent-a-ord.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/10415551_958239497536956_7248354797172214504_n.jpg?oh=77351ff6afdd0e02ad6b66dcfc7fa661&oe=5564D8D4"
-/>	
+		
 
 		<ul>
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
