--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<li><a href="mee2.jpg"> Resized Photo </a></li>
 		<li><a href="header.psd"> Header </a></li>
 	</ul>
-<li><a href="module10.html"> Module 10</a></li>
+<li><a href="module10.htm"> Module 10</a></li>
 
 	</body>
 		</html>
