--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head><title>Katheryn's Webpage!</title></head>
 	<link rel="stylesheet" type="text/css" href="cat.css" />
 	<body>
-		<h1>KATHERYN</h1>
+		<h1><a href="header.jpeg"> KATHERYN </a></h1>
 		
 	<ul>
 		<li><a href="index.html">Home</a></li>
