--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
 	<head><title>Katheryn's Portfolio!</title></head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
-<link rel="index.html" />
+<link rel="index.html" target="_blank" href="cat.html" />
 
 <body>
 
