--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 	<head><title>Katheryn's Portfolio!</title></head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
-<a href="index.html" target="_blank"> Portfolio  <a/>
+<a href="portfolio.html" target="_blank"> Portfolio  <a/>
 
 <body>
 
