--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,7 @@
 	<head><title>Katheryn's Portfolio!</title></head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
-<a href="portfolio.html" target="_blank"> Portfolio  <a/>
-
+<a href="http://katheryl.github.io/cat/index.html" >
 <body>
 
 </body>
