--- a/home.html
+++ b/home.html
@@ -6,6 +6,35 @@
 <a href="http://katheryl.github.io/cat/index.html" >
 <body>
 
+
+  <h1>Katheryn</h1>
+  <h2>you've always had the power my dear, you just had to learn for yourself</h2>
+  </header>
+  
+<div id="container">
+<nav id="nav">
+ <ul>
+   <li><a href="index.html">Home</a></li>
+   <li><a href="contact.html">Contact Me</a></li>
+   <li><a href="resume.html">Resume</a></li>
+   <li><a href="portfolio.html">Portfolio</a></li>
+  </ul>
+  </nav>
+  
+<section id="content">
+  
+  <h3>Content</h3>
+  
+  <p>Stuff About Me</p>
+  </section>
+  
+<footer>
+  <p>Katheryn Sullivan</p>
+  </footer>
+  
+  </div>
+     
 </body>
+
 
 </html>
