--- a/home.html
+++ b/home.html
@@ -12,14 +12,15 @@
   </header>
   
 <div id="container">
+
 <nav id="nav">
- <ul>
-   <li><a href="index.html">Home</a></li>
-   <li><a href="contact.html">Contact Me</a></li>
-   <li><a href="resume.html">Resume</a></li>
-   <li><a href="portfolio.html">Portfolio</a></li>
-  </ul>
-  </nav>
+	<ul>
+		<li><a href="http://katheryl.github.io/cat/home/index.html">Home</a></li>
+		<li><a href="http://katheryl.github.io/cat/contact/contact.html">Contact Me</a></li>
+		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
+		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
+	</ul>
+</nav>
   
 <section id="content">
   
