--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,15 @@
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
 <a href="http://katheryl.github.io/cat/portfolio.html" >
+
+<nav id="nav">
+	<ul>
+		<li><a href="http://katheryl.github.io/cat/home/index.html">Home</a></li>
+		<li><a href="http://katheryl.github.io/cat/contact/contact.html">Contact Me</a></li>
+		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
+		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
+	</ul>
+	</nav>
 <body>
 
 </body>
