--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 	<head><title>Katheryn's Webpage!</title></head>
 	<link rel="stylesheet" type="text/css" href="cat.css" />
+	
+	<div>
+		<a href="http://katheryl.github.io/cat/index.html">Website</a>
+	</div>
+	
 	<body>
 		
 	<ul>
