--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head><title>Home</title></head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
-<a href="http://katheryl.github.io/cat/home.html" >
+<a href="http://katheryl.github.io/cat/index.html" >
 <body>
 
 
