--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 	<head><title>Katheryn's Portfolio!</title></head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
-<a href="http://katheryl.github.io/cat/portfolio.html" >
+<a href="http://katheryl.github.io/cat/index.html" >
 
 <nav id="nav">
 	<ul>
