--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,10 @@
 <!DOCTYPE>
 <html>
 	<head><title>Katheryn's Portfolio!</title></head>
-<link rel="stylesheet" type="text/css" href="cat.css" />
 
-<a href="http://katheryl.github.io/cat/index.html" >
+	<link rel="stylesheet" type="text/css" href="cat.css" />
+
+<a href="http://katheryl.github.io/cat/home.html" >
 
 <nav id="nav">
 	<ul>
