--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="cat.css" />
 	
 	<div>
-		<a href="http://katheryl.github.io/cat/index.html">Website</a>
+		<a href="http://katheryl.github.io/cat/home.html">Website</a>
 	</div>
 	
 	<body>
