--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 
 <nav id="nav">
 	<ul>
-		<li><a href="http://katheryl.github.io/cat/home/index.html">Home</a></li>
+		<li><a href="http://katheryl.github.io/cat/home/home.html">Home</a></li>
 		<li><a href="http://katheryl.github.io/cat/contact/contact.html">Contact Me</a></li>
 		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
 		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
