--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,8 @@
 
 <nav id="nav">
 	<ul>
-		<li><a href="http://katheryl.github.io/cat/home/home.html">Home</a></li>
-		<li><a href="http://katheryl.github.io/cat/contact/contact.html">Contact Me</a></li>
+		<li><a href="http://katheryl.github.io/cat/home.html">Home</a></li>
+		<li><a href="http://katheryl.github.io/cat/contact.html">Contact Me</a></li>
 		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
 		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
 	</ul>
