--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,8 @@
 
 <a href="http://katheryl.github.io/cat/home.html" >
 
+<div id="container">
+
 <nav id="nav">
 	<ul>
 		<li><a href="http://katheryl.github.io/cat/home.html">Home</a></li>
@@ -16,7 +18,23 @@
 </nav>
 
 <body>
+<section id="content">
+  
+  <h3>Content</h3>
+  
+  <p>Stuff About Me</p>
+</section>
+  
+<footer>
+  <p>Katheryn Sullivan</p>
+</footer>
+  
+</div>
+     
+</body>
 
+
+</html>
 </body>
 
 </html>
