--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,24 @@
 <!DOCTYPE>
 <html>
-	<head><title>Katheryn's Portfolio!</title></head>
-
-	<link rel="stylesheet" type="text/css" href="cat.css" />
+	<head>
+		<meta charset="UTF-8">
+	
+		<title>Katheryn's Portfolio!</title>
+		
+<link rel="stylesheet" type="text/css" href="cat.css" />
 
 <a href="http://katheryl.github.io/cat/home.html" >
 
-<div id="container">
+<header>
+		<img src="logo.jpeg" alt="name logo"/>
+</header>
+	</head>
+	
+	<body>
 
-<nav id="nav">
+		<div id="container">
+
+		<nav id="nav">
 	<ul>
 		<li><a href="http://katheryl.github.io/cat/home.html">Home</a></li>
 		<li><a href="http://katheryl.github.io/cat/contact.html">Contact Me</a></li>
@@ -17,7 +27,7 @@
 	</ul>
 </nav>
 
-<body>
+
 <section id="content">
   
   <h3>Content</h3>
