--- a/home.html
+++ b/home.html
@@ -1,6 +1,11 @@
 <!DOCTYPE>
 <html>
-	<head><title>Home</title></head>
+	<head>
+		<meta charset="UTF-8">
+	
+		<title>Home</title>
+	
+	</head>
 <link rel="stylesheet" type="text/css" href="cat.css" />
 
 <a href="http://katheryl.github.io/cat/home.html" >
