--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <a href="http://katheryl.github.io/cat/home.html" >
 
 <header>
-		<img src="logo.jpg" alt="name logo"/>
+		<img src="https://www.flickr.com/photos/124698714@N07/17294413242/"/>
 </header>
 	</head>
 	
