--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,7 @@
 
 <a href="http://katheryl.github.io/cat/home.html" >
 
-<header>
-		<img src="https://www.flickr.com/photos/124698714@N07/17294413242/"/>
-</header>
+<header>live and let live</header>
 	</head>
 	
 	<body>
