--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
 <a href="http://katheryl.github.io/cat/home.html" >
 
-<header>live and let live</header>
+<h4><img src="https://www.flickr.com/photos/124698714@N07/17294413242/">live and let live</h4>
 	</head>
 	
 	<body>
