--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
 <a href="http://katheryl.github.io/cat/home.html" >
 
-<h4><img src="logo.jpg" alt="katheryn logo"/>live and let live</h4>
+<h4><img src="logo.jpg" alt="katheryn logo" width="1500px" height:"500px"/>live and let live</h4>
 	</head>
 	
 	<body>
