--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 	
-		<title>Home</title>
+		<title>Katheryn's Home</title>
 	
 	</head>
 
@@ -13,32 +13,36 @@
 
 <body>
 
+<div id="screen">
 
-  <h1>Katheryn</h1>
-  
-<div id="container">
+<header>
+</header>
 
-<nav id="nav">
+<nav>
+	<div class="top">
 	<ul>
 		<li><a href="http://katheryl.github.io/cat/home.html">Home</a></li>
 		<li><a href="http://katheryl.github.io/cat/contact.html">Contact Me</a></li>
 		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
 		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
 	</ul>
-</nav>
+	</div>
+<section>
   
-<section id="content">
+<div class="position">
   
-  <h3>Content</h3>
+  <h2>Welcome</h2>
   
-  <p>Stuff About Me</p>
-  </section>
+  <p>Katheryn here</p>
+</div>
+
+<img id="me" src="https://scontent-ord.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/320363_633297840031125_424208269_n.jpg?oh=ed2fdc9b4a0521c455e71fa3868eb6dc&oe=55E23F96" alt="photo">
+
+</section>
+</div>
   
-<footer>
-  <p>Katheryn Sullivan</p>
-  </footer>
-  
-  </div>
+<footer class="bottom">
+</footer>
      
 </body>
 
