--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 	
-		<title>Katheryn's Portfolio!</title>
-		
-<h4></h4>
+		<title>Katheryn's Portfolio</title>
 	
 	</head>
 	
@@ -13,37 +11,40 @@
 
 <a href="http://katheryl.github.io/cat/home.html" >
 	
-	<body>
+<body>
 
-		<div id="container">
+	<div id="screen">
 
-		<nav id="nav">
+<header>
+</header>
+
+<nav>
+	<div class="top">
 	<ul>
 		<li><a href="http://katheryl.github.io/cat/home.html">Home</a></li>
 		<li><a href="http://katheryl.github.io/cat/contact.html">Contact Me</a></li>
 		<li><a href="http://katheryl.github.io/cat/portfolio.html">Portfolio</a></a>
 		<li><a href="http://katheryl.github.io/cat/resume.html">Resume</a></li>
 	</ul>
-</nav>
-
-
-<section id="content">
+	</div>
+<section>
   
-  <h3>Content</h3>
+<div class="position">
   
-  <p>Stuff About Me</p>
-</section>
+  <h2>Welcome</h2>
   
-<footer>
-  <p>Katheryn Sullivan</p>
-</footer>
-  
+  <p>Katheryn here</p>
 </div>
+
+<img id="me" src="https://scontent-ord.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/320363_633297840031125_424208269_n.jpg?oh=ed2fdc9b4a0521c455e71fa3868eb6dc&oe=55E23F96" alt="photo">
+
+</section>
+</div>
+  
+<footer class="bottom">
+</footer>
      
 </body>
 
 
-</html>
-</body>
-
-</html>
+</html>	
