--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	</div>
 	
 	<body>
-		
+
+		<body bgcolor="#00ff7f">
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="contact.html">Contact Me</a></li>
