--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
 
-		<body bgcolor="#00ff7f">
+		<body style="background-color:#00ff7f">
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="contact.html">Contact Me</a></li>
