--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	
 	<body>
 
-		<body style="background-color:#00ff7f">
+		<div id="screen">
+		</div>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="contact.html">Contact Me</a></li>
