--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 	</div>
 	
 	<body>
-
 		<div id="screen">
-		</div>
+		
+		<div class="top">
+	
+<nav>
 	<ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="contact.html">Contact Me</a></li>
 		<li><a href="portfolio.html">Portfolio</a></li>
 		<li><a href="resume.html">Resume</a></li>
 	</ul>
-		
+	</div>	
 
 		<ul>
 			<li><a href= "https://www.msu.edu/~sulli465/module1.pdf"> Module 1 </a></li>
