--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
   
 <div class="position">
   
-  <h2>Welcome</h2>
+  <h3>My Professional Portfolio</h3>
   
-  <p>Katheryn here</p>
+  <p2>Here you will find all things that encompass my educational career thus far. There are pieces I have created in class, there are pieces I have created on my own, and there are pieces I have created for fun.</p2>
 </div>
 
 </section>
