--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   
 <div class="position">
   
-  <h4>My Resume</h4>
+  <h4>My Contact Information</h4>
  
 
 
@@ -39,8 +39,10 @@
 </section>
 </div>
   
-<footer class="bottom">
-</footer>
+<div class="contact">
+
+</div>
+
      
 </body>
 
