--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 	
-		<title>Katheryn's Contact</title>
+		<title>Katheryn's Resume</title>
 	
 	</head>
 
@@ -31,11 +31,11 @@
   
 <div class="position">
   
-  <h4>My Contact Information</h4>
+  <h5>My Resume</h5>
 </div> 
 </section>
   
-<div class="contact">
+<div class="resume">
 
 </div>
 
