--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE>
 <html>
-	<head><title>Katheryn's Webpage!</title></head>
-	<link rel="stylesheet" type="text/css" href="cat.css" />
+	<head><title>Katheryn's WRA 210 Course Page</title></head>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 	
-	<div>
-		<a href="http://katheryl.github.io/cat/index.html">Website</a>
-	</div>
 	
 	<body>
-	<body style="background-color:lightgrey">
-		<div id="screen">
-		
-		<div class="top">
 	
 <nav>
 	<ul>
