--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 <nav>
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li><a href="contact.html">Contact Me</a></li>
 		<li><a href="portfolio.html">Portfolio</a></li>
 		<li><a href="resume.html">Resume</a></li>
