--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head><title>Katheryn's WRA 210 Course Page</title></head>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-	
+<h1>Katheryn Sullivan's WRA210 Course Site</h1>	
 	
 	<body>
 	
