--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
 <section>
   
 <div class="position">
-  
+	<a href="wra_202.pdf">Professional Dream</a>
+	<a href="sullivan_pomo.jpg">Some Self Explaining</a>
+	<a href="sullivan_merged.jpg">My Cat as a Panther</a>
   <h3>My Professional Portfolio</h3>
   
   <p2>Here you will find all things that encompass my educational career thus far. There are pieces I have created in class, there are pieces I have created on my own, and there are pieces I have created for fun.</p2>
@@ -39,6 +41,7 @@
 </section>
 
 <div class="work">
+
 
 </div>
   
