--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,12 @@
 </section>
 
 <div class="work">
-	<a href="wra_202.pdf">Professional Dream</a>
-	<img src="sullivan_pomo.jpg" alt="self"/>Some Self Explaining
-	<img src="sullivan_merged" alt="suzi"/>My Cat as a Panther
-	<img src="klogo.jpg" alt="katheryn"/>My logo
+	<ul>
+	<li><a href="wra_202.pdf">Professional Dream</a></li>
+	<li><img src="sullivan_pomo.jpg" alt="self"/>Some Self Explaining</li>
+	<li><img src="sullivan_merged,jpg" alt="suzi"/>My Cat as a Panther</li>
+	<li><img src="klogo.jpg" alt="katheryn"/>My logo</li>
+	</ul>
 </div>
   
      
