--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,7 @@
 </section>
 
 <div class="work">
+<div id="pics">
 	<ul>
 	<li><a href="wra_202.pdf">Professional Dream</a></li>
 	<li><img src="sullivan_pomo.jpg" alt="self"/>Some Self Explaining</li>
