--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
 <div id="pics">
 	<ul>
 	<li><a href="wra_202.pdf">Professional Dream</a></li>
-	<li><img src="sullivan_pomo.jpg" alt="self"/>Some Self Explaining</li>
-	<li><img src="sullivan_merged,jpg" alt="suzi"/>My Cat as a Panther</li>
-	<li><img src="klogo.jpg" alt="katheryn"/>My logo</li>
+	<img src="sullivan_pomo.jpg" alt="self"/>
+	<img src="sullivan_merged.jpg" alt="suzi"/>
+	<img src="klogo.jpg" alt="katheryn"/>My logo
 	</ul>
 </div>
   
