--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,10 @@
 <div class="work">
 <div id="pics">
 	<ul>
-	<li><a href="wra_202.pdf">Professional Dream</a></li>
+	<li><a href="wra_202.pdf">Professional Dream(click me)</a></li>
 	<img src="sullivan_pomo.jpg" alt="self"/>
 	<img src="sullivan_merged.jpg" alt="suzi"/>
-	<img src="klogo.jpg" alt="katheryn"/>My logo
+	<img src="klogo.jpg" alt="katheryn"/>
 	</ul>
 </div>
   
