--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,11 @@
 </section>
   
 <div class="contact">
+<div id="contactme">
+	<a href="https://www.facebook.com/katheryn.sullivan.3"><img src="fbicon.png" class="icons" alt="Facebook icon"/></a>
+	<a href="https://instagram.com/sullykatmeow/"><img src="instaicon.png" class="icons" alt="Instagram icon"/></a>
+	<a href="https://twitter.com/SullyKat_Meow"><img src="twittericon.png" class="icons" alt="Twitter icon"></a>
+	<a href="https://www.linkedin.com/profile/preview?locale=en_US&trk=prof-0-sb-preview-primary-button"><img src="linkicon.png" class="icons" alt="linked in icon"/></a>
 
 </div>
 
