--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
   Thought expression is something I will forever be grateful to Michigan State University for. It is somewhere close to Heaven, bringing me closer and closer to my goals everyday, showing me beautiful things I've never seen on a daily basis 
   and forcing me to challenge myself in ways I didn't know possible.</p>
 </div>
-
+<img src="klogo.jpg" alt="katheryn"/>
 <img id="me" src="https://scontent-ord.xx.fbcdn.net/hphotos-xfa1/v/t1.0-9/320363_633297840031125_424208269_n.jpg?oh=ed2fdc9b4a0521c455e71fa3868eb6dc&oe=55E23F96" alt="photo">
 
 </section>
