--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
   
 <div class="position">
   
-  <h2>Welcome</h2>
-  <img src="klogo.jpg" alt="katheryn"/>
+  <h2><img src="klogo.jpg" alt="katheryn"/><h2>
+  
   <p>Katheryn here. A professional writing major who has a love for long walks on the beach, romantic comedies, and Christmas time. Writing, talking, exercising, and sleeping are pretty much what my life revolves around.  
   I plan to do big things with my life, although I'm not quite sure what those big things will be yet. I live by the mottoes, "know who you are and do it on purpose" and "live and let live." 
   I think cliches are fun, highly underrated, and a great way to express your thoughts. 
