--- a/resume.html
+++ b/resume.html
@@ -37,6 +37,8 @@
 </section>
   
 <div class="resume">
+	
+<div id="res">
 	<a href="resume.pdf"><img src="resume.png" id="resume" alt="resume"/></a>
 </div>
 
