--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,8 @@
 <div class="position">
   
   <h5>My Resume</h5>
+  <p3>Feel free to click on the image and download it to have a full view
+  of my Resume</p3>
 
   </div> 
 </section>
