--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
 <div id="pics">
 	<ul>
 	<li><a href="wra_202.pdf"><font size="4">Professional Dream(click)</font></a></li>
-	<a href="http://theodysseyonline.com/author/katheryn-lamour-sullivan"><img src="odysseyicon.png" class="icons" alt="odyssey"></a>
+	<a href="http://theodysseyonline.com/author/katheryn-lamour-sullivan">The Odyssey</a>
 	<img src="klogo.jpg" alt="katheryn"/>
 	<img src="sullivan_pomo.jpg" alt="self"/>
 	<img src="sullivan_merged.jpg" alt="suzi"/>
