--- a/home.html
+++ b/home.html
@@ -31,6 +31,7 @@
   
 <div class="position">
 
+<h1>katheryn</h1>
   
   <p>Katheryn here. A professional writing major who has a love for long walks on the beach, romantic comedies, and Christmas time. Writing, talking, exercising, and sleeping are pretty much what my life revolves around.  
   I plan to do big things with my life, although I'm not quite sure what those big things will be yet. I live by the mottoes, "know who you are and do it on purpose" and "live and let live." 
